--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,26 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@react-three/drei": "^10.7.7",
+        "@react-three/fiber": "^9.5.0",
+        "@types/three": "^0.182.0",
         "axios": "^1.13.2",
-        "casper-js-sdk": "^5.0.7",
+        "casper-js-sdk": "^2.15.4",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "dotenv": "^17.2.3",
         "framer-motion": "^11.0.0",
+        "gsap": "^3.14.2",
+        "lenis": "^1.3.17",
         "lucide-react": "^0.320.0",
-        "next": "15.1.0",
+        "next": "14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-dropzone": "^14.2.3",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
-        "thirdweb": "^5.116.1"
+        "thirdweb": "^5.116.1",
+        "three": "^0.182.0"
     },
     "devDependencies": {
         "@types/node": "^20.11.0",
