--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -16,6 +17,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "plugins": [
       {
         "name": "next"
@@ -25,11 +27,7 @@
       "@/*": [
         "./*"
       ]
-    },
-    "types": [
-      "node"
-    ],
-    "target": "ES2017"
+    }
   },
   "include": [
     "next-env.d.ts",
